看了一下文档，指定一个 primary 就能禁用 PyPI 源，重新添加上

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ollama = "^0.1.9"
 [[tool.poetry.source]]
 name = "mirrors"
 url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
+priority = "primary"
 
 [build-system]
 requires = ["poetry-core"]
